fixed chart shadow on mobile

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -87,13 +87,13 @@
         min-height:500px;
     }
     #chartcard2 {
-        min-height: 500px;
+        min-height: 350px !important;
     }
     #chartcardsha {
-        min-height: 450px;
+        min-height: 500px;
     }
     #chartcardsha2 {
-        min-height: 450px;
+        min-height: 350px !important;
     }
 
 
